--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,7 @@ section{
     color: var(--main-color);
 }
 
+
 .header .cart-items-container .cart-item .fa-times:hover{
     color: var(--main-color);
 }
@@ -222,6 +223,21 @@ section{
     background-position: center;
 }
 
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 100;
+    justify-content: center;
+    align-items: center;
+}
+.tenor-gif-embed {
+    max-width: 62%;
+    max-height: 62%;
+}
 .home .content{
     max-width: 60rem;
 }
